k8s/serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: churn-model
